# SiZuJiQiRen

./: frames_2026-05-27_10.48.54.gv  go2_filtered_5cm_obstacles.ply  go2_filtered_5cm_occupancy.csv  go2_filtered_5cm_occupancy.pgm  go2_filtered_5cm_occupancy_meta.txt  go2_filtered_filtered.ply  go2_filtered_ground.ply  go2_filtered_obstacles.csv  go2_filtered_occupancy.csv  go2_filtered_occupancy.pgm  go2_filtered_occupancy_meta.txt  go2_lidar_points.csv  go2_lidar_points.ply  go2_state_log.csv  helper.md  safe_move_log.csv  test.txt
helper/: UBUNTU_CODEX_HANDOFF.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/go2_lidar_filter/lib/go2_lidar_filter/: go2_lidar_filter
install/go2_lidar_filter/share/ament_index/resource_index/parent_prefix_path/: go2_lidar_filter
install/go2_lidar_filter/share/go2_lidar_filter/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_lidar_filter/share/go2_lidar_filter/cmake/: go2_lidar_filterConfig.cmake
install/go2_lidar_snapshot/lib/go2_lidar_snapshot/: go2_lidar_snapshot
install/go2_lidar_snapshot/share/go2_lidar_snapshot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_safe_move/lib/go2_safe_move/: go2_safe_move
install/go2_safe_move/share/go2_safe_move/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_slam_bringup/share/ament_index/resource_index/parent_prefix_path/: go2_slam_bringup
install/go2_slam_bringup/share/go2_slam_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_slam_bringup/share/go2_slam_bringup/cmake/: go2_slam_bringupConfig.cmake
install/go2_slam_bringup/share/go2_slam_bringup/config/: pointcloud_to_laserscan.yaml
install/go2_slam_bringup/share/go2_slam_bringup/launch/: go2_slam.launch.py
install/go2_sport_test/lib/go2_sport_test/: go2_sport_test
install/go2_sport_test/share/ament_index/resource_index/parent_prefix_path/: go2_sport_test
install/go2_sport_test/share/go2_sport_test/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_sport_test/share/go2_sport_test/cmake/: go2_sport_testConfig.cmake
install/go2_state_logger/share/ament_index/resource_index/package_run_dependencies/: go2_state_logger
install/go2_state_logger/share/ament_index/resource_index/parent_prefix_path/: go2_state_logger
install/go2_state_logger/share/go2_state_logger/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_state_logger/share/go2_state_logger/cmake/: go2_state_loggerConfig.cmake
install/go2_tf_bridge/lib/go2_tf_bridge/: go2_tf_bridge
install/go2_tf_bridge/share/ament_index/resource_index/package_run_dependencies/: go2_tf_bridge
install/go2_tf_bridge/share/ament_index/resource_index/parent_prefix_path/: go2_tf_bridge
install/go2_tf_bridge/share/go2_tf_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/helloworld/lib/helloworld/: hello
install/helloworld/share/ament_index/resource_index/package_run_dependencies/: helloworld
install/helloworld/share/helloworld/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/go2_lidar_filter/: CMakeLists.txt
src/go2_lidar_filter/src/: go2_lidar_filter.cpp
src/go2_lidar_snapshot/go2_lidar_snapshot/: CMakeLists.txt
src/go2_lidar_snapshot/go2_lidar_snapshot/src/: go2_lidar_snapshot.cpp
src/go2_safe_move/go2_safe_move/: CMakeLists.txt
src/go2_safe_move/go2_safe_move/src/: go2_safe_move.cpp
src/go2_slam_bringup/: CMakeLists.txt
src/go2_slam_bringup/config/: slam_toolbox.yaml
src/go2_sport_test/go2_sport_test/: CMakeLists.txt  package.xml
src/go2_state_logger/go2_state_logger/: CMakeLists.txt
src/go2_state_logger/go2_state_logger/src/: go2_state_logger.cpp
src/go2_tf_bridge/: CMakeLists.txt
src/go2_tf_bridge/src/: go2_tf_bridge.cpp
src/helloworld/helloworld/: package.xml
src/helloworld/helloworld/src/: go2_sport_test.cpp  hello.cpp
